[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | astropy_helpers
    | docs
    | .history
  )/
  | ah_bootstrap.py
)
'''
target-version = ['py39']

[tool.ruff]
fix = true
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
    "joss",
]

# Same as Black.
line-length = 120
target-version = "py39"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ["E501"]
select = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
fixable = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
extend-ignore = [
    # pytest (PT)
    "PT001",  # Always use pytest.fixture()
    "PT004",  # Fixtures which don't return anything should have leading _
    "PT023",  # Always use () on pytest decorators
    # General
    "PGH004", # NOQA IS THE BEST OF ALL TIME
    "FBT003", # Boolean positional value in function call
    "FBT002", # Boolean default value in function definition
]

[tool.ruff.per-file-ignores]
"setup.py" = ["INP001"] # Part of configuration, not a package.
"conftest.py" = ["INP001"] # Part of configuration, not a package.
 "docs/*.py" = [
     "INP001", # implicit-namespace-package. The examples are not a package.
     "F405", # `html_theme_options` may be undefined, or defined from star imports: `sunpy_sphinx_theme.conf`
     "A001", # Variable `copyright` is shadowing a python builtin
]
# "aiapy/data/sample.py" = [
# "A001", # Variable `__doc__` is shadowing a python builtin
# "PLE0604", # Invalid object in `__all__`, must contain only strings
# ]
# "examples/*.py" = [
#     "T201", # We need print in our examples
# ]
